tweaked app for heroku

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,13 +8,21 @@ click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
 colorama==0.4.6
+dj-database-url==3.0.0
 Django==5.1.7
+django-heroku==0.3.1
+gunicorn==23.0.0
 kombu==5.5.3
+packaging==25.0
 pillow==11.2.1
 prompt_toolkit==3.0.51
+psycopg2==2.9.10
 python-dateutil==2.9.0.post0
+python-decouple==3.8
 six==1.17.0
 sqlparse==0.5.3
+typing_extensions==4.14.0
 tzdata==2025.2
 vine==5.1.0
 wcwidth==0.2.13
+whitenoise==6.9.0
