--- a/railway.toml
+++ b/railway.toml
@@ -1,2 +1,5 @@
 [mounts]
   media = "/app/media"
+
+[deploy.postdeploy]
+  commands = ["python manage.py migrate", "python manage.py collectstatic"]
