--- a/railway.toml
+++ b/railway.toml
@@ -1,5 +1,5 @@
 [mounts]
-media = "/app/media"
+  media = "/registration/media"
 
 [deploy.postdeploy]
-commands = ["python manage.py migrate", "python manage.py collectstatic"]
+  commands = ["python manage.py migrate", "python manage.py collectstatic"]
