--- a/requirements.txt
+++ b/requirements.txt
@@ -2,16 +2,21 @@ amqp==5.3.1
 asgiref==3.8.1
 billiard==4.2.1
 celery==5.5.2
+certifi==2025.6.15
 channels==4.2.2
+charset-normalizer==3.4.2
 click==8.2.0
 click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
+cloudinary==1.44.1
 colorama==0.4.6
 dj-database-url==3.0.0
 Django==5.1.7
+django-cloudinary-storage==0.3.0
 django-heroku==0.3.1
 gunicorn==23.0.0
+idna==3.10
 kombu==5.5.3
 packaging==25.0
 pillow==11.2.1
@@ -20,10 +25,13 @@ psycopg2==2.9.10
 python-dateutil==2.9.0.post0
 python-decouple==3.8
 python-dotenv==1.1.0
+python-magic==0.4.27
+requests==2.32.4
 six==1.17.0
 sqlparse==0.5.3
 typing_extensions==4.14.0
 tzdata==2025.2
+urllib3==2.5.0
 vine==5.1.0
 wcwidth==0.2.13
 whitenoise==6.9.0
